# cppOpenGLTest

./: .gitignore  CMakeLists.txt  Dependency.cmake  gitignore.txt  main.cpp  project.txt
KShader/: simple.fs  simple.vs  texture.fs  texture.vs
include/: Shader.hpp
include/glad/: glad.h
msrc/: GraphicMyTest.cpp  controller.cpp  controller.h  header.cpp  header.h  myshader.cpp  myshader.h
src/: GraphicJLectTest.cpp  GraphicKLectTest.cpp  GraphicLectTest.cpp  GraphicMyTest.cpp  KShader.cpp  KShader.h  MyShader.cpp  Program.cpp  Program.h  Shader.cpp  buffer.cpp  buffer.h  common.cpp  common.h  context.cpp  context.h  glad.c  texture.cpp  texture.h  vertex_layout.cpp  vertex_layout.h
